[gd_scene load_steps=3 format=3 uid="uid://c2a3hfndf6pvy"]

[ext_resource type="Theme" uid="uid://f3b0gpq4f0ef" path="res://ui/zombie_ui.theme" id="1_ig3j2"]
[ext_resource type="Script" uid="uid://dnqxaed2r2jvx" path="res://ui/scenes/in_game_ui.gd" id="2_vc7nx"]

[node name="in_game_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig3j2")
script = ExtResource("2_vc7nx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_right = 150.0
offset_bottom = 50.0
text = "1:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Score: 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
